@@ -33,7 +33,7 @@
 #include <memory.h>
 #endif
 
-#include <stxxl/io>
+#include <stxxl/bits/io/iobase.h>
 #include <stxxl/bits/noncopyable.h>
 #include <stxxl/bits/common/rand.h>
 #include <stxxl/bits/common/aligned_alloc.h>
